<resources>
    <string name="app_name">Masfat</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password"><i>Password</i></string>
    <string name="sign_up">Sign Up</string>
    <string name="connect">Connect with</string>
    <string name="register">Register</string>
    <string name="fname"><i>First Name</i></string>
    <string name="lname"><i>Last Name</i></string>
    <string name="phone"><i>Phone Number</i></string>
    <string name="email_h"><i>Email</i></string>
    <string name="gender"><i>Gender (Optional)</i></string>
    <string name="dob"><i>DOB (Optional)</i></string>
    <string name="occu"><i>Occupation (Optional)</i></string>
    <string name="address">Address (Optional)</string>
    <string name="change_pass">Change Password</string>
    <string name="new_password">Enter new password</string>
    <string name="renew_password">Re-Enter new password</string>
    <string name="password_changed">Your password has been change successfully</string>
    <string name="goto_login">Go to Login</string>
    <string name="booking_cancel">Your booking has\n been cancelled</string>
    <string name="goto_home">Go to home</string>
    <string name="skip">Skip</string>
    <string name="destination">Destination</string>
    <string name="available">Available</string>
    <string name="not_available">Not Available</string>
    <string name="booking_shared">Your booking successfully\nshared with joen doe</string>
    <string name="facilities">Facilities</string>
    <string name="more_info">More Info</string>
    <string name="nearby">Nearby parking map view</string>
    <string name="search">Search for parking</string>
    <string name="list_view_parking">List View parking</string>
    <string name="thanks">THANKS</string>
    <string name="booking_confirmed">Your booking has\n been confirmed</string>
    <string name="booking_cancel_confirmation">Do you want to cancel\n your booking</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="booking_history_remove">Are you sure to remove Booking\n from history</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="my_booking">My Booking</string>
    <string name="find_my_car">Find My Car</string>
    <string name="notifications">Notifications</string>
    <string name="about">About Masfat</string>
    <string name="feedback">Feedback</string>
    <string name="faqs">Faqs</string>
    <string name="languages">Languages</string>
    <string name="logout">Logout</string>
    <string name="available_balance">Available Balance</string>
    <string name="personal_info">Personal Info</string>
    <string name="acc_info">Account Info</string>
    <string name="top_up">Top-Up</string>
    <string name="booking_history">Booking History</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="arrival">ARRIVAL</string>
    <string name="departure">DEPARTURE</string>
    <string name="count_down">Countdown</string>
    <string name="extend_time">Extend Time</string>
    <string name="share_booking">Share Booking</string>
    <string name="find_my_spot">Find My Car / My Spot</string>
    <string name="direction">Direction to the Destination</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="booking_removed">Booking removed successfully\n from the list</string>
    <string name="edit_info">Edit Info</string>
    <string name="current_balance">Current Balance</string>
    <string name="top_up_history">Top-Up History</string>
    <string name="bookings">Bookings</string>
    <string name="account_info">Account Info</string>
    <string name="add_topup">+ Add Topup</string>
    <string name="view_topup_history">View Topup History</string>
    <string name="top_up_more">+ Top Up More</string>
    <string name="change_lang">Change Language</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="send">SEND</string>
    <string name="feedback_done">Your Message has\nbeen sent</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_for_parking">Search for parking</string>
    <string name="get_direction">Get Direction</string>
    <string name="view_shared_history">View Shared History</string>
    <string name="share">Share</string>
    <string name="goto_my_account">Go to my account</string>
    <string name="shared_with">Shared with</string>
    <string name="shared_history">Shared History</string>
    <string name="amount">Amount</string>
    <string name="payment_method">Payment Method</string>
    <string name="add_now">Add Now</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="about_masfat">About Masfat</string>
    <string name="next">Next</string>
    <string name="parking_booking">Parking Booking</string>
</resources>
