<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/dim_10dp"
    android:layout_marginRight="@dimen/dim_10dp"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".screens.signup.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <com.mobile.masfat.customwidget.BoldTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45dp"
        android:text="@string/register"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/dim_15sp"/>

    <com.mobile.masfat.customwidget.RegularEditText
        android:id="@+id/txt_fname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45dp"
        android:layout_marginLeft="@dimen/dim_20dp"
        android:layout_marginRight="@dimen/dim_20dp"
        android:layout_marginBottom="@dimen/dim_20dp"
        android:background="@drawable/gray_border_box"
        android:hint="@string/fname"
        android:padding="@dimen/dim_10dp"
        android:singleLine="true"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/border_gray"
        android:textSize="@dimen/dim_15sp" />

    <com.mobile.masfat.customwidget.RegularEditText
        android:id="@+id/txt_lname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45dp"
        android:singleLine="true"
        android:background="@drawable/gray_border_box"
        android:layout_marginLeft="@dimen/dim_20dp"
        android:layout_marginRight="@dimen/dim_20dp"
        android:textSize="@dimen/dim_15sp"
        android:padding="@dimen/dim_10dp"
        android:hint="@string/lname"
        android:textColorHint="@color/border_gray"
        android:textColor="@color/colorAccent"/>

    <com.mobile.masfat.customwidget.RegularEditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45dp"
        android:singleLine="true"
        android:background="@drawable/gray_border_box"
        android:layout_marginTop="@dimen/dim_20dp"
        android:layout_marginLeft="@dimen/dim_20dp"
        android:layout_marginRight="@dimen/dim_20dp"
        android:textSize="@dimen/dim_15sp"
        android:padding="@dimen/dim_10dp"
        android:hint="@string/email_h"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/border_gray"
        android:textColor="@color/colorAccent"/>

    <com.mobile.masfat.customwidget.RegularEditText
        android:id="@+id/txt_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45dp"
        android:singleLine="true"
        android:background="@drawable/gray_border_box"
        android:layout_marginTop="@dimen/dim_20dp"
        android:layout_marginLeft="@dimen/dim_20dp"
        android:layout_marginRight="@dimen/dim_20dp"
        android:textSize="@dimen/dim_15sp"
        android:padding="@dimen/dim_10dp"
        android:hint="@string/phone"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/border_gray"
        android:textColor="@color/colorAccent"/>

    <com.mobile.masfat.customwidget.RegularEditText
        android:id="@+id/txt_gender"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45dp"
        android:singleLine="true"
        android:background="@drawable/gray_border_box"
        android:layout_marginTop="@dimen/dim_20dp"
        android:layout_marginLeft="@dimen/dim_20dp"
        android:layout_marginRight="@dimen/dim_20dp"
        android:textSize="@dimen/dim_15sp"
        android:padding="@dimen/dim_10dp"
        android:hint="@string/gender"
        android:textColorHint="@color/border_gray"
        android:textColor="@color/colorAccent"/>

    <com.mobile.masfat.customwidget.RegularEditText
        android:id="@+id/txt_dob"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45dp"
        android:singleLine="true"
        android:background="@drawable/gray_border_box"
        android:layout_marginTop="@dimen/dim_20dp"
        android:layout_marginLeft="@dimen/dim_20dp"
        android:layout_marginRight="@dimen/dim_20dp"
        android:textSize="@dimen/dim_15sp"
        android:padding="@dimen/dim_10dp"
        android:hint="@string/dob"
        android:textColorHint="@color/border_gray"
        android:textColor="@color/colorAccent"/>

    <com.mobile.masfat.customwidget.RegularEditText
        android:id="@+id/txt_occu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45dp"
        android:singleLine="true"
        android:background="@drawable/gray_border_box"
        android:layout_marginTop="@dimen/dim_20dp"
        android:layout_marginLeft="@dimen/dim_20dp"
        android:layout_marginRight="@dimen/dim_20dp"
        android:textSize="@dimen/dim_15sp"
        android:padding="@dimen/dim_10dp"
        android:hint="@string/occu"
        android:textColorHint="@color/border_gray"
        android:textColor="@color/colorAccent"/>

    <com.mobile.masfat.customwidget.RegularEditText
        android:id="@+id/txt_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_80dp"
        android:singleLine="true"
        android:background="@drawable/gray_border_box"
        android:layout_marginTop="@dimen/dim_20dp"
        android:layout_marginLeft="@dimen/dim_20dp"
        android:layout_marginRight="@dimen/dim_20dp"
        android:textSize="@dimen/dim_15sp"
        android:padding="@dimen/dim_10dp"
        android:hint="@string/address"
        android:gravity="top"
        android:textColorHint="@color/border_gray"
        android:textColor="@color/colorAccent"/>

    <com.mobile.masfat.customwidget.RegularEditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45dp"
        android:singleLine="true"
        android:background="@drawable/gray_border_box"
        android:layout_marginTop="@dimen/dim_20dp"
        android:layout_marginLeft="@dimen/dim_20dp"
        android:layout_marginRight="@dimen/dim_20dp"
        android:textSize="@dimen/dim_15sp"
        android:padding="@dimen/dim_10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/border_gray"
        android:textColor="@color/colorAccent"/>

    <com.mobile.masfat.customwidget.BoldButton
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45dp"
        android:background="@drawable/btn_orange_bg"
        android:layout_marginLeft="@dimen/dim_20dp"
        android:layout_marginRight="@dimen/dim_20dp"
        android:layout_marginTop="@dimen/dim_10dp"
        android:layout_marginBottom="@dimen/dim_10dp"
        android:textColor="@color/white"
        android:text="@string/sign_up"
        android:textSize="@dimen/dim_16sp"
        android:textAllCaps="false"
        android:gravity="center"/>
</LinearLayout>
</ScrollView>