<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/seperator_gray">
        <com.mobile.masfat.customwidget.BoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_balance"
            android:textSize="@dimen/dim_15sp"
            android:textColor="@color/border_gray"
            android:gravity="center"
            android:padding="@dimen/dim_15dp"/>

        <com.mobile.masfat.customwidget.BoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dim_16sp"
            android:textColor="@color/black"
            android:text="KD 40.00"
            android:gravity="center_horizontal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_2dp"
            android:background="@color/seperator_gray"
            android:layout_marginTop="@dimen/dim_20dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.mobile.masfat.customwidget.RegularTextView
        android:id="@+id/txt_change_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_50dp"
        android:textSize="@dimen/dim_15sp"
        android:text="@string/change_pass"
        android:gravity="center_vertical"
        android:padding="@dimen/dim_10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_1dp"
        android:background="@color/seperator_gray"/>
    <com.mobile.masfat.customwidget.RegularTextView
        android:id="@+id/txt_topup_history"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_50dp"
        android:textSize="@dimen/dim_15sp"
        android:text="@string/top_up_history"
        android:gravity="center_vertical"
        android:padding="@dimen/dim_10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_1dp"
        android:background="@color/seperator_gray"/>
    <com.mobile.masfat.customwidget.RegularTextView
        android:id="@+id/txt_booking"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_50dp"
        android:textSize="@dimen/dim_15sp"
        android:text="@string/bookings"
        android:gravity="center_vertical"
        android:padding="@dimen/dim_10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_1dp"
        android:background="@color/seperator_gray"/>

</LinearLayout>