<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mobile.masfat.customwidget.BoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/available_balance"
        android:textSize="@dimen/dim_15sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/dim_15dp"/>

    <com.mobile.masfat.customwidget.BoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dim_16sp"
        android:textColor="@color/colorAccent"
        android:text="2540 KD"
        android:gravity="center_horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_1dp"
        android:background="@color/seperator_gray"
        android:layout_marginTop="@dimen/dim_30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dim_20dp"
        android:orientation="vertical">
        <com.mobile.masfat.customwidget.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="@dimen/dim_16sp"
            android:textColor="@color/black"/>

        <com.mobile.masfat.customwidget.RegularEditText
            android:id="@+id/txt_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/dim_15sp"
            android:padding="@dimen/dim_5dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_1dp"
        android:background="@color/seperator_gray"
        android:layout_marginTop="@dimen/dim_20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dim_20dp"
        android:orientation="vertical">
        <com.mobile.masfat.customwidget.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:textSize="@dimen/dim_16sp"
            android:textColor="@color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_payment_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



        <com.mobile.masfat.customwidget.RegularButton
            android:id="@+id/btn_add_now"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_45dp"
            android:background="@drawable/btn_orange_bg"
            android:layout_marginLeft="@dimen/dim_35dp"
            android:layout_marginRight="@dimen/dim_35dp"
            android:layout_marginTop="@dimen/dim_40dp"
            android:textColor="@color/white"
            android:text="@string/add_now"
            android:textSize="@dimen/dim_16sp"
            android:textAllCaps="false"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>