<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <com.mobile.masfat.customwidget.BoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/available_balance"
        android:textSize="@dimen/dim_15sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/dim_15dp"/>

    <com.mobile.masfat.customwidget.BoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dim_16sp"
        android:textColor="@color/colorAccent"
        android:text="2540 KD"
        android:gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_50dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_1dp"
            android:background="@color/border_gray"
            android:layout_centerInParent="true"/>

        <ImageView
            android:id="@+id/img_add"
            android:layout_width="@dimen/dim_40dp"
            android:layout_height="@dimen/dim_40dp"
            android:layout_centerInParent="true"
            android:src="@drawable/add"/>
        <com.mobile.masfat.customwidget.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_add"
            android:text="@string/add_topup"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/dim_15sp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="@dimen/dim_20dp"/>
    </RelativeLayout>


    <com.mobile.masfat.customwidget.BoldButton
        android:id="@+id/btn_history"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45dp"
        android:background="@drawable/btn_orange_bg"
        android:layout_marginLeft="@dimen/dim_35dp"
        android:layout_marginRight="@dimen/dim_35dp"
        android:layout_marginTop="@dimen/dim_250dp"
        android:textColor="@color/white"
        android:text="@string/view_topup_history"
        android:textSize="@dimen/dim_16sp"
        android:textAllCaps="false"
        android:layout_gravity="bottom"
        android:gravity="center"/>
</LinearLayout>