<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_200dp"
            android:layout_margin="@dimen/dim_15dp"
            app:cardElevation="@dimen/dim_5dp"
            app:cardCornerRadius="@dimen/dim_10dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:padding="@dimen/dim_10dp"
                android:gravity="center">

                <com.mobile.masfat.customwidget.RegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dim_15sp"
                    android:gravity="center"
                    android:text="@string/booking_cancel_confirmation"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="@dimen/dim_200dp"
        android:layout_height="@dimen/dim_45dp"
        android:layout_marginTop="190dp"
        android:weightSum="2"
        android:layout_centerHorizontal="true">

        <com.mobile.masfat.customwidget.BoldButton
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_orange_left"
            android:gravity="center"
            android:text="@string/yes"
            android:textSize="@dimen/dim_15sp"
            android:textColor="@color/white"/>
        <com.mobile.masfat.customwidget.BoldButton
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_blue_bg_right"
            android:gravity="center"
            android:text="@string/no"
            android:textSize="@dimen/dim_15sp"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>