<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_15dp"
        app:cardElevation="@dimen/dim_5dp"
        app:cardCornerRadius="@dimen/dim_10dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.mobile.masfat.customwidget.BoldTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_50dp"
                android:text="@string/change_pass"
                android:gravity="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/dim_18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_1dp"
                android:background="@color/seperator_gray"/>

            <com.mobile.masfat.customwidget.RegularEditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_45dp"
                android:singleLine="true"
                android:layout_marginLeft="@dimen/dim_20dp"
                android:layout_marginRight="@dimen/dim_20dp"
                android:textSize="@dimen/dim_15sp"
                android:padding="@dimen/dim_10dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:textColor="@color/colorAccent"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_1dp"
                android:background="@color/seperator_gray"/>

            <com.mobile.masfat.customwidget.RegularEditText
                android:id="@+id/txt_conf_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_45dp"
                android:singleLine="true"
                android:layout_marginLeft="@dimen/dim_20dp"
                android:layout_marginRight="@dimen/dim_20dp"
                android:textSize="@dimen/dim_15sp"
                android:padding="@dimen/dim_10dp"
                android:hint="@string/renew_password"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:textColor="@color/colorAccent"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_1dp"
                android:background="@color/seperator_gray"/>


            <com.mobile.masfat.customwidget.RegularButton
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_45dp"
                android:background="@drawable/btn_orange_bg"
                android:layout_margin="@dimen/dim_30dp"
                android:textColor="@color/white"
                android:text="@string/change_pass"
                android:textSize="@dimen/dim_16sp"
                android:textAllCaps="false"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>